2017-08-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c: Call correct variant of getservbyport_r
	* common-src/krb5-security.c: Call correct variant of getservbyname_r
	* common-src/security-util.c: Call correct variant of getservbyname_r
	* common-src/ambind.c: include netinet/in.h
	* config/amanda/syshacks.m4: Do not set GETSERVBYNAME_R5 and
	  GETSERVBYPORT_R5
	* config/amanda/amanda_configure.m4: use ax_func_which_getservbyname_r
	* config/macro-archive/ax_func_which_getservbyname_r.m4: New macro to
	  detect getservbyname_r variant

2017-08-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix compilation

2017-08-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Print html error even on curl error

2017-08-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3-device.c: Check for S3_ERROR_NotFound

2017-07-31  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amssl.pl: Chomp openssl result

2017-07-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Fix test

2017-07-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Amdump.pm: Read stdout of suprocess and log them as
	  L_INFO
	* server-src/amreport.pl: When in script mode, print error to stdout
	* installcheck/amreport.pl: Fix test

2017-07-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3-device.c: Use S3_name
	* device-src/s3.c (S3_name, S3_bucket_name): Define
	* device-src/s3.h (S3_name, S3_bucket_name): Add prototype

2017-07-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Config/FoldingHash.pm: Fix use of Tie::StdHash

2017-07-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Fix aborted, set storage stats to
	  TERMINATED_*

2017-06-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-chunker+2taper-flush.pl,